Implemented /beePickers/courses endpoint
This endpoint returns every course information (fetched from github) in json format
