# docs/swagger.json
@@ -24,6 +24,21 @@
                 "responses": {}
             }
         },
+        "/beePicker/courses": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "BeePicker"
+                ],
+                "summary": "Hello World",
+                "responses": {}
+            }
+        },
         "/hello": {
             "get": {
                 "description": "Hello World",
